main/default/objects/PCR_Van__c/PCR_Van__c.object-meta.xml
<CustomObject>
    <label>PCR Van</label>
    <nameField>
        <label>PCR Van Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PCR Vans</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>