main/default/objects/PCR_Van__c/fields/Area_Name__c.field-meta.xml
<CustomField>
    <fullName>Area_Name__c</fullName>
    <description>Area name of the van currently deployed</description>
    <label>Area Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>