main/default/objects/PCR_Van__c/fields/Police_Station__c.field-meta.xml
<CustomField>
    <fullName>Police_Station__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup from PCR Van to Police Station to indicate the location</description>
    <label>Police Station</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>PCR Vans</relationshipLabel>
    <relationshipName>PCR_Vans</relationshipName>
    <type>Lookup</type>
</CustomField>